Added a model, controller, and repository for edges